--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,13 @@
     height: 100vh;
     width: 100%;
 }
+#task-list ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+#checkbox:checked ~ span{
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+}
