--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,19 +6,29 @@
 #container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-
+    margin-top: 4rem;
     height: 100vh;
     width: 100%;
 }
-#task-list ul{
-    list-style-type: none;
+#header{
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
-#checkbox:checked ~ span{
-    font-family: 'Times New Roman', Times, serif;
-    font-style: italic;
+#inputs form{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+#placar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    gap: 3rem;
 }
